optimized print style of content model, minor whitespace fix (req by DESY)
svn path=/ZMS/trunk/; revision=5167

--- a/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
+++ b/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
@@ -483,6 +483,33 @@ ul.zmi-container > .zmi-item > .center {
 	float:left;
 	width:80% !important;
 }
+
+/* DESGN DUMMY: Add-Button */
+#zmi-tab ul.zmi-container.pageelements li.zmi-item:last-child .center:after {
+	content: "\f055";
+	font-family: Fontawesome;
+	font-size: 24px;
+	display: block;
+	text-align: center;
+	background-color: #ffffff;
+	line-height: 1;
+	padding: 0;
+	cursor: pointer;
+	position:absolute;
+	border-radius: 50%;
+	width: 22px;
+	height: 22px;
+	margin: -11px 20% 0 40%;
+	color:#818ea2;
+}
+@media (max-width: 767px) {
+	#zmi-tab ul.zmi-container.pageelements li.zmi-item:last-child .center:after {
+		margin: -11px 0 0 50%;
+	}
+}
+
+
+
 ul.zmi-container > .zmi-item > .right {
 	float:left;
 	width:20% !important;
